Test: workflow with subfolder fix

--- a/.github/workflows/sql-doc-generator.yml
+++ b/.github/workflows/sql-doc-generator.yml
@@ -3,7 +3,7 @@ name: Free SQL Documentation Generator
 on:
   pull_request:
     paths:
-      - 'models/**/*.sql'
+      - "my-dbt-project/models/**/*.sql"
     types: [opened, synchronize, reopened]
   workflow_dispatch:
 
@@ -13,26 +13,26 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
-      
+
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v41
         with:
-          files: models/**/*.sql
-      
+          files: my-dbt-project/models/**/*.sql
+
       - name: Setup Python
         if: steps.changed-files.outputs.any_changed == 'true'
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      
+          python-version: "3.11"
+
       - name: Install Ollama
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
@@ -40,27 +40,27 @@ jobs:
           ollama serve &
           sleep 5
           ollama pull llama3.2:3b
-      
+
       - name: Install dependencies
         if: steps.changed-files.outputs.any_changed == 'true'
         run: pip install pyyaml requests gitpython sqlparse
-      
+
       - name: Generate documentation
         if: steps.changed-files.outputs.any_changed == 'true'
         env:
           CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
           OLLAMA_HOST: "http://localhost:11434"
-        run: python .github/scripts/doc_generator/main.py
-      
+        run: python my-dbt-project/.github/scripts/doc_generator/main.py
+
       - name: Commit docs
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           git config user.name "SQL Doc Bot"
           git config user.email "bot@actions"
-          git add models/**/*.md
+          git add my-dbt-project/models/**/*.md
           git diff --cached --quiet || git commit -m "📝 Auto-generate SQL documentation"
           git push
-      
+
       - name: Comment on PR
         if: steps.changed-files.outputs.any_changed == 'true'
         uses: actions/github-script@v7
@@ -72,4 +72,3 @@ jobs:
               repo: context.repo.repo,
               body: '## 📚 SQL Documentation Generated\n\n**Cost**: $0.00 ✅\n**Generator**: Ollama (Free)\n\nDocumentation files created next to your SQL files.'
             });
-
